<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="380dp"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square2_18"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="380dp"
            android:id="@+id/square2_17"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="380dp"
            android:id="@+id/square2_16"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="320dp"
            android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square2_15"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="115dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="320dp"
            android:id="@+id/square2_14"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="260dp"
            android:id="@+id/square2_13" android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp" android:layout_marginTop="140dp"
            android:id="@+id/square2_8" android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="295dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:id="@+id/square2_3"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/try_again"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button" android:fontFamily="@font/adamina"
            android:padding="10dp" android:paddingStart="10dp" android:paddingLeft="10dp" android:paddingTop="10dp"
            android:paddingEnd="10dp" android:paddingRight="10dp" android:paddingBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            android:id="@+id/tryAgain" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
            android:textSize="12sp"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="260dp"
            android:id="@+id/square2_12"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="260dp"
            android:id="@+id/square2_11"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="200dp"
            android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square2_10"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="115dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="200dp"
            android:id="@+id/square2_9"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp" android:layout_marginTop="140dp"
            android:id="@+id/square2_7"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:layout_marginTop="80dp" android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/square2_5"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="115dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="80dp"
            android:id="@+id/square2_4"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="175dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:id="@+id/square2_2"/>
    <TextView
            android:text="@string/pick_figure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pickFigure"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="65dp"
            android:textSize="18sp"
            android:fontFamily="@font/adamina" android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="77dp"
            android:layout_marginEnd="78dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/finish_registration"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button" android:fontFamily="@font/adamina"
            android:padding="10dp" android:paddingStart="10dp" android:paddingLeft="10dp" android:paddingTop="10dp"
            android:paddingEnd="10dp" android:paddingRight="10dp" android:paddingBottom="10dp"
            android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            android:textSize="12sp" android:id="@+id/finishRegistration"/>
    <TextView
            android:text="@string/second_registration_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="24sp" android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            android:fontFamily="@font/adamina" android:textColor="@android:color/black"
            android:id="@+id/secondRegistrationStep"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="55dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:outlineProvider="none"
            android:id="@+id/square2_1"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="55dp" android:layout_marginTop="140dp" android:id="@+id/square2_6"/>
</androidx.constraintlayout.widget.ConstraintLayout>