<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="375dp"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_18"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="375dp"
            android:id="@+id/square4_17" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="375dp"
            android:id="@+id/square4_16" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="315dp"
            android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_15"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="315dp"
            android:id="@+id/square4_14" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="255dp"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_13"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="295dp" android:layout_marginTop="135dp"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_8"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="295dp"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:layout_marginEnd="56dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_3"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="255dp"
            android:id="@+id/square4_12" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="255dp"
            android:id="@+id/square4_11" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="195dp"
            android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/square4_10"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="195dp"
            android:id="@+id/square4_9" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="135dp"
            android:id="@+id/square4_7" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="235dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:layout_marginTop="75dp" android:layout_marginEnd="116dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/square4_5"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" android:layout_marginTop="75dp"
            android:id="@+id/square4_4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:id="@+id/square4_2" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/pick_figure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pickFigure"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:textSize="18sp"
            android:fontFamily="@font/adamina" android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="77dp"
            android:layout_marginEnd="78dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/finish_login"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button" android:fontFamily="@font/adamina"
            android:padding="10dp" android:paddingStart="10dp" android:paddingLeft="10dp" android:paddingTop="10dp"
            android:paddingEnd="10dp" android:paddingRight="10dp" android:paddingBottom="10dp"
            style="@style/Widget.AppCompat.Button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"
            android:textSize="12sp"
            android:id="@+id/finishLogin" android:layout_marginEnd="131dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="130dp"/>
    <TextView
            android:text="@string/second_login_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="24sp" android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
            android:fontFamily="@font/adamina" android:textColor="@android:color/black"
            android:id="@+id/secondLoginStep"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/pickFigure"
            android:outlineProvider="none"
            android:id="@+id/square4_1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"/>
    <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/pickFigure" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="135dp" android:id="@+id/square4_6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"/>
</androidx.constraintlayout.widget.ConstraintLayout>